fix player on safari

--- a/components/audioPlayer/AudioPlayer.module.css
+++ b/components/audioPlayer/AudioPlayer.module.css
@@ -27,7 +27,7 @@
 .audioDetail {
   display: flex;
   position: relative;
-  justify-content: space-around;
+  justify-content:space-evenly;
   align-items: center;
   transition-duration: 0.3s;
   height: 100%;
@@ -54,6 +54,7 @@
 
 .playerButton {
   height: 40px;
+  width: 40px;
   display: flex;
   flex-direction: row;
   margin: 5px;
@@ -62,6 +63,7 @@
 .playerButtonActive {
   background-color: rgb(217, 50, 214);
   height: 40px;
+  width: 80px;
   display: flex;
   flex-direction: row;
   margin: 5px;
@@ -145,11 +147,12 @@
     min-width: 12rem;
     max-width: 5rem;
     padding: 1rem;
-    display: flex;
     justify-content: center;
     margin: 0 auto;
     position: -webkit-sticky;
     bottom: 3.5rem;
+    right: 0;
+    left: 0;
     z-index: 100 !important;
   }
   .audioTitle {
